[gd_scene load_steps=6 format=3 uid="uid://dk7dx1bjoh3fh"]

[ext_resource type="Script" uid="uid://pqlhfjko2ekl" path="res://survivors_game.gd" id="1_k5t8c"]
[ext_resource type="PackedScene" uid="uid://c5g5e836tv8m4" path="res://entitys/player/player.tscn" id="1_xhjh3"]
[ext_resource type="PackedScene" uid="uid://dtfsmickfoaro" path="res://tile_map.tscn" id="2_dc2qj"]
[ext_resource type="PackedScene" uid="uid://c00vq86p6mjpx" path="res://entitys/enemys/slime/mob.tscn" id="4_i68cx"]

[sub_resource type="Curve2D" id="Curve2D_xx1nr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 684.253, 448.748, 0, 0, 0, 0, 915.372, 448.748, 0, 0, 0, 0, 1422.34, 446.493, 0, 0, 0, 0, 1435.12, 959.35, 0, 0, 0, 0, 675.733, 954.841, 0, 0, 0, 0, 673.603, 440.857)
}
point_count = 6

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_k5t8c")

[node name="Background" type="Node2D" parent="."]

[node name="TileMap" parent="Background" instance=ExtResource("2_dc2qj")]
z_index = -1

[node name="EffectsLayer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Player" parent="." instance=ExtResource("1_xhjh3")]
unique_name_in_owner = true
position = Vector2(-11, 30)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-988.453, -625.123)
scale = Vector2(0.938911, 0.887187)
curve = SubResource("Curve2D_xx1nr")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(684.253, 448.748)

[node name="RegresionTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
autostart = true

[node name="Mob" parent="." instance=ExtResource("4_i68cx")]
position = Vector2(421, 948)

[node name="UI" type="Node2D" parent="."]
z_index = 10

[node name="BossTimer" type="Timer" parent="."]
wait_time = 240.0
autostart = true

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
autoplay = true

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="RegresionTimer" to="." method="_on_regresion_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="BossTimer" to="." method="_on_boss_timer_timeout"]
